package ucf.assignments;
/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Kate Ingraham
 */

import java.nio.file.Path;

public class InputValidator {

    
    public boolean checkDate(String date){
        //Check to make sure that the date is in the proper format
        //Create class DateFormat
        //set resolution mode
        //try to parse the date string
        //if it throws an exception, prompt the user to reenter the due date
        return true;
    }
}
