@startuml
class Item{
-description: String
-dueDate: String
-completeStatus: boolean
}

class ToDoList{
-listTitle: String
-items: ArrayList
+addItem()
+editItem()
+removeItem()
+markComplete()
+getItems()
}

class Lists{
-listMap: Map
+addList()
+removeList()
+editList()
+getListMap()
+mergeLists()
}

class FileManager{
+saveOneList()
+saveAll()
+openOneList()
+openAll()
}

class ListDisplay{
-displayArray: ArrayList
+displayItems()
-displayUncompleted()
-displayCompleted()
+emptyDisplayArray()
+sortDisplayArray()
+getDisplayArray()
}

class ToDoController{
+mCheckUncompleted: CheckMenuItem
+mCheckCompleted: CheckMenuItem
+listView: ListView
+cbLists: ChoiceBox
+updateListView()
+updateCBList()
+cbListSelect()
+mLoadListClicked()
+mLoadMultipleClicked()
+mSaveListClicked()
+mSaveAllListsClicked()
+mAddListClicked()
+mEditListClicked()
+mDeleteListClicked()
+mDisplayUncompletedClicked()
+mDisplayCompletedClicked()
+bAddItemClicked()
+bEditItemClicked()
+bDeleteItemClicked()
+bCompleteItemClicked()
+mSortDueDateClicked()
}

class App{
main()
start()
}

class InputValidator{
+checkDate()
}


org.javafx.Application <|-- App
App -- ToDoController
ToDoController o-- Lists
ToDoController o-- ListDisplay
ToDoController o-- FileManager
ToDoController o-- InputValidator
Lists *-- ToDoList
ToDoList *-- Item
@enduml